--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="item">3</div>
       <div class="item">4</div>
       <div class="item">5</div>
-      <div class="item">6</div>
+      <div class="item setWidth">6</div>
     </main>
     <footer></footer>
   </div>
