--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
   <div class="flex-container">
     <header></header>
     <main>
-      <div class="item">1 alsdkfja;lskdfj</div>
+      <div class="item"></div>
       <div class="item">2</div>
       <div class="item">3</div>
-      <div class="item">4</div>
-      <div class="item">5</div>
+      <div class="item"></div>
+      <div class="item"></div>
       <div class="item">6</div>
     </main>
     <footer></footer>
