--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
       <div class="item"></div>
       <div class="item">2</div>
-      <div class="item"><br><br>3<br>asfaf<br><br></div>
+      <div class="item">3</div>
       <div class="item"></div>
       <div class="item"></div>
       <div class="item">6</div>
