--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="item">3</div>
       <div class="item"></div>
       <div class="item"></div>
-      <div class="item">6</div>
+      <div class="item align-self">6</div>
     </main>
     <footer></footer>
   </div>
